--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,25 +1,23 @@
-redis:
- image: redis
+version: '3'
+services:
+  redis:
+   image: redis
 
-db:
- image: postgres:9.4
+  db:
+   image: postgres:9.4
+   environment:
+    POSTGRES_USER: postgres
+    POSTGRES_PASSWORD: postgres
 
-vote:
- image: voting-app
- ports:
-  - 5000:80
- links:
-  - redis
+  vote:
+   image: voting-app
+   ports:
+    - 5000:80
 
-worker:
- image: worker-app
- links:
-  - db
-  - redis
+  worker:
+   image: worker-app
 
-result:
- image: result-app
- ports:
-  - 5001:80
- links:
-  - db
+  result:
+   image: result-app
+   ports:
+    - 5001:80
